replace some Helper.createBaseModel